[package]
name = "wdid"
version = "0.5.0"
authors = ["Lukas Sestic <lukas.sestic@photomath.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
regex = "1"
termion = "*"